<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/mathSign"
        android:layout_width="41dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:text=" ?"
        app:layout_constraintBottom_toTopOf="@+id/operationLabel"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/operationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:text="@string/operationLabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <RadioGroup
        android:id="@+id/operationGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/calcDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathSign">

        <RadioButton
            android:id="@+id/addBtn"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/addBtn" />

        <RadioButton
            android:id="@+id/subBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subBtn" />

        <RadioButton
            android:id="@+id/multBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multBtn" />

        <RadioButton
            android:id="@+id/divBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divBtn" />

    </RadioGroup>

    <TextView
        android:id="@+id/calcDisplay"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationGroup" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonReset"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/buttonCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReset"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay" />

</androidx.constraintlayout.widget.ConstraintLayout>
